--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assests/css/style.css">
-    <link rel="stylesheet" href="/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="/assests/css/modal.css">
-    <link rel="stylesheet" href="/assests/css/grid.css">
-    <link rel="stylesheet" href="/assests/css/base.css">
-    <link rel="stylesheet" href="/assests/css/reponsive.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
+    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assests/js/main.js">
+    <link rel="stylesheet" href="./assests/css/base.css">
+    <link rel="stylesheet" href="./assests/css/grid.css">
+    <link rel="stylesheet" href="./assests/css/modal.css">
+    <link rel="stylesheet" href="./assests/css/reponsive.css">
     <title>The band</title>
 </head>
 
@@ -72,15 +73,15 @@
             <div class="row member-list">
                 <div class="col col-3 text-center s-coll-full mt-16">
                     <h3 class="member-item--name">Name</h3>
-                    <img src="/assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
+                    <img src="./assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
                 </div>
                 <div class="col col-3 text-center s-coll-full mt-16">
                     <h3 class="member-item--name">Name</h3>
-                    <img src="/assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
+                    <img src="./assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
                 </div>
                 <div class="col col-3 text-center s-coll-full mt-16">
                     <h3 class="member-item--name">Name</h3>
-                    <img src="/assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
+                    <img src="./assests/img/Contact-tourband/Tour band.jpg" alt="" class="member-item--img">
                 </div>
             </div>
         </div>
@@ -96,7 +97,7 @@
                 </ul>
                 <div class="row place-list">
                     <div class=" col col-3 mt-16 s-coll-full ">
-                        <img src="/assests/img/Tour place/newyork.jpg" alt="New york" class="place-img">
+                        <img src="./assests/img/Tour place/newyork.jpg" alt="New york" class="place-img">
                         <div class="place-body">
                             <h3 class="place-body--heading">New York</h3>
                             <p class="place-body-datetime">Fri 27 Nov 2016</p>
@@ -105,7 +106,7 @@
                         </div>
                     </div>
                     <div class="col col-3 mt-16 s-coll-full ">
-                        <img src="/assests/img/Tour place/paris.jpg" alt="New york" class="place-img">
+                        <img src="./assests/img/Tour place/paris.jpg" alt="New york" class="place-img">
                         <div class="place-body">
                             <h3 class="place-body--heading">Paris</h3>
                             <p class="place-body-datetime">Fri 27 Nov 2016</p>
@@ -114,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col col-3 mt-16 s-coll-full ">
-                        <img src="/assests/img/Tour place/sanfran.jpg" alt="New york" class="place-img">
+                        <img src="./assests/img/Tour place/sanfran.jpg" alt="New york" class="place-img">
                         <div class="place-body">
                             <h3 class="place-body--heading">San Francisco</h3>
                             <p class="place-body-datetime">Fri 27 Nov 2016</p>
@@ -163,7 +164,7 @@
 
     <!-- start Map -->
     <div class="map-section">
-        <img src="/assests/img/map/map.jpg" alt="map">
+        <img src="./assests/img/map/map.jpg" alt="map">
     </div>
     <!-- end Map -->
 
@@ -209,7 +210,7 @@
             </footer>
         </div>
     </div>
-    <script src="/assests/js/main.js"></script>
+    <script src="assests/js/main.js"></script>
 </body>
 
 </html>
